--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^18.11.6",
     "D": "^1.0.0",
     "axios": "^1.1.3",
+    "color.js": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
